2005-05-11  Naba Kumar <naba@gnome.org>
	
	* plugins/gdb/actions.c, plugins/gdb/breakpoints.c,
	plugins/gdb/breakpoints.h, plugins/gdb/debug_tree.c,
	plugins/gdb/plugin.c, plugins/gdb/plugin.h,
	plugins/gdb/registers.c, plugins/gdb/stack_trace.c,
	plugins/gdb/watch.c: Completed breakpoints implementation. Fixed
	memory leaks.
	
	* plugins/symbol-browser/an_symbol_prefs.c,
	plugins/symbol-browser/an_symbol_search.c,
	plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/an_symbol_view.h,
	plugins/symbol-browser/plugin.c: Fixed memory leaks.

2005-05-11  Naba Kumar <naba@gnome.org>

	* libanjuta/anjuta-shell.c: Fixed runtime warning.
	
	* libanjuta/e-splash.c,	libanjuta/e-splash.h, src/main.c: Pass the
	progress bar location at create time, instead of hardcoding.
	
	* pixmaps/Makefile.am, (added) pixmaps/anjuta_splash_mini.png:
	Added mini splash screen.
	
	* plugins/editor/text_editor.c: Do not produce warning when file
	monitor could not be created.
	
	* plugins/profile-default/plugin.c: Save project session on exit.
	Show mini splash with progress bar at profile load.

2005-05-10  Naba Kumar <naba@gnome.org>

	* configure.in, manuals/Makefile.am: Fixed compile flags.
	Disable outdated manuals builds.
	
	* global-tags/Makefile.am: Uninstall tags files on
	'make uninstall'
	
	* libegg/Makefile.am: Use configured deprecated flags.
	
	* manuals/reference/libanjuta/tmpl/ianjuta-iterable-tree.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-iterable.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml:
	Updated.
	
	* mime/Makefile.am: Take DESTDIR into account.
	
	* plugins/class-gen/Makefile.am: Fixed 'make distcheck' errors.
	
	* plugins/editor/aneditor-autocomplete.cxx: Fixed crash bug
	on scope autocompletion.
	
	* plugins/debug-manager/plugin.c, plugins/gdb/debugger.c,
	plugins/gdb/debugger.h, plugins/gdb/plugin.c: Use project
	shared libs and static libs paths for debugging. Order them
	correctly.
	
	* po/POTFILES.in: Updated.
